/*
*   Protocol Buffers for Radkov
*
*   Implements a rpc client/server and message
*   format
*
*/
syntax = "proto3";
package rkpb;
option go_package = "gitlab.clan-ac.xyz/ac-gameworx/radkov/pkg/rkpb";

// Radkov Service 
service Radar {
    rpc StreamPlayerPositions(stream PlayerPositions) returns (stream Response) {}
    rpc PlayerPositionsStream(Request) returns (stream Response);
}

// Represents a generic server request
message Request {
    int32 code = 1; // which service to get? see svcno.go
}

// Represents a generic server response
message Response {
    bool ok = 1;
}

// Represents multiple player x & y coordinates
message PlayerPositions {
    repeated bytes rawVectors = 1;
}

